--- a/styles/sass/_variablesMixins.scss
+++ b/styles/sass/_variablesMixins.scss
@@ -8,8 +8,7 @@ $letterSpacing: 1px;
 
 // colour: Color Palette 169452
 $accent: #40e0d0;
-$secondaryColor: #72b5b7;
-$primaryColor: #633a82;
+$primaryColor: #b272e4;
 $primaryGrey: #706c61;
 $primaryBlack: #333333;
 $primaryWhite: #f1fcfc;
