--- a/styles/sass/_variablesMixins.scss
+++ b/styles/sass/_variablesMixins.scss
@@ -8,9 +8,9 @@ $letterSpacing: 1px;
 
 // colour: Color Palette 169452
 $accent: #40e0d0;
-$primaryColor: #b272e4;
-$primaryGrey: #706c61;
-$primaryBlack: #333333;
+$primaryColor: rgb(55, 42, 65);
+$primaryGrey: rgb(148, 145, 160);
+$primaryBlack: rgb(51, 51, 51);
 $primaryWhite: #f1fcfc;
 
 
