--- a/styles/style.css
+++ b/styles/style.css
@@ -299,16 +299,17 @@ header {
 header h1 {
   font-family: "Odibee Sans", cursive;
   text-transform: uppercase;
-  letter-spacing: 5px;
+  letter-spacing: 10px;
   font-size: 6rem;
   color: #f1fcfc;
+  letter-spacing: 19px;
 }
 
 header h2 {
   font-family: "Roboto", sans-serif;
-  letter-spacing: 1px;
-  font-size: 2rem;
-  color: #40e0d0;
+  letter-spacing: 3px;
+  font-size: 1.8rem;
+  color: #f1fcfc;
   text-transform: uppercase;
 }
 
@@ -324,16 +325,15 @@ header h2 {
 
 h3 {
   color: #f1fcfc;
-  font-size: 2.5rem;
-  font-family: "Odibee Sans", cursive;
-  text-transform: uppercase;
-  letter-spacing: 5px;
+  font-size: 1.8rem;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 3px;
 }
 
 p {
   color: #40e0d0;
   font-family: "Roboto", sans-serif;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
   font-size: 1.5rem;
 }
 
@@ -356,7 +356,7 @@ p {
 
 fieldset {
   font-family: "Roboto", sans-serif;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
   font-size: 2rem;
   border: 2px solid #40e0d0;
   color: #f1fcfc;
@@ -380,12 +380,12 @@ fieldset {
 }
 
 .closestObjFlex ul li {
-  padding: 2%;
+  padding: 3% 0;
 }
 
 .closestObjFlex ul li {
   font-family: "Roboto", sans-serif;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
   font-size: 2rem;
   color: #f1fcfc;
   position: relative;
@@ -395,7 +395,7 @@ fieldset {
   background: none;
   border: 4px solid #f1fcfc;
   font-family: "Roboto", sans-serif;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
   text-transform: uppercase;
   color: #f1fcfc;
   padding: 5px 10px;
