--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -18,6 +18,7 @@ li{
     width: 80%; 
     max-width: 1300px;
     margin: 0 auto;
+
 }
 
 li{
@@ -37,13 +38,17 @@ img{
 
 html{
     font-size: 62.5%;
+    text-shadow: 0px 1px 2px $primaryBlack;
 }
 
 body{
-    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.25), rgba(55, 42, 65, 0.7)), url(../assets/image_from_ios.jpg);
-    background-repeat: no-repeat;
+    background-image: radial-gradient(circle at center, rgba(51, 51, 52, 0.25), rgba(55, 42, 65, 0.7)), url(../assets/image_from_ios.jpg);
     background-size: cover;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-auto-columns: 100%;
     height: 100vh;
+    min-height: 100%;
 }
 
 // header styles
@@ -60,6 +65,7 @@ header{
         @include fontSize(18);
         color: $primaryWhite;
         text-transform: uppercase;
+        letter-spacing: 4px;
 
     }
     @include centerFlex;
@@ -68,11 +74,17 @@ header{
 }
 
 // main styles/alignment
+.planetSearchGrid{
+    display: grid;
+}
+
+
 .fieldsetFlex{
     display: grid;
     grid-template-columns: 40% 60%;
     grid-template-rows: auto;
     grid-gap: 30px;
+    min-height: 100%;
 
 }
 
@@ -82,13 +94,24 @@ h3 {
     color: $primaryWhite;
     @include fontSize(18);
     @include secondaryFont();
+    letter-spacing: 6px;
+    padding: 10px;
+    text-align: center;
 }
 
 p{
-    color: $accent;
+    color: $primaryWhite;
     @include secondaryFont;
     @include fontSize(15);
 
+}
+
+.pInfo{
+    color: $accent;
+}
+
+.planetTextbox{
+    text-transform: uppercase;
 }
 
 .planetSearchTextBox,
@@ -103,35 +126,38 @@ fieldset{
     border: 2px solid $accent;
     color: $primaryWhite;
 }
-.datesSearchFlex {
-    display: flex;
+.datesSearch {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    label{
+        text-align: center;
+    }
 }
 // dynamic elements' styles
-.closestObjFlex {
+.closestObjFlex,
+.dateSearchResults {
     padding-top: 5%;
-    position: relative;
-
     ul {
-        width: fit-content;
-            li{
-                padding: 3% 0;
-            }
+        // width: fit-content;
         li{
             @include secondaryFont();
             @include fontSize(20);
             color: $primaryWhite;
-            position: relative;
+            padding: 3% 0;
         }
     } 
 }
 
-
+.speaceObjectFlex{
+    display: flex;
+    justify-content: space-around;
+}
 
 .submitButton {
     background: none;
-    border: 4px solid $primaryWhite;
+    border: 2px solid $primaryWhite;
     @include secondaryFont();
-    text-transform: uppercase;
     color: $primaryWhite;
     padding: 5px 10px;
     cursor: pointer;
@@ -142,3 +168,18 @@ fieldset{
     background-color: rgba(64, 224, 208, 0.5);
 }
 
+footer{
+    background: black;
+    color: $primaryWhite;
+    padding: 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    p{
+        @include fontSize(12);
+        text-align: center;
+    }
+    .imgDiv{
+        width: 3%;
+    }
+}
